--- a/styles.css
+++ b/styles.css
@@ -119,3 +119,31 @@ body{
 .link-color{
     color: #0095f6;
 }
+
+@media (max-width: 1024px) {
+    .instagram-container {
+        width: 90%;
+    }
+}
+
+@media (max-width: 650px) {
+    body {
+        background-color: #ffffff;
+    }
+
+    .instagram-container {
+        width: 90%;
+    }
+
+    .instagram-phone {
+        display: none;
+    }
+
+    .instagram-continue {
+        width: 100%;
+    }
+    
+    .group {
+        border: 1px solid transparent;
+    }
+}
